# ihabibi-signal-labs

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  SPECS.md  docker-compose.yml  pyproject.toml  setup.sh
apps/web/: .env.example  README.md  index.html  package-lock.json  package.json  vercel.json  vite.config.ts  vitest.config.ts
apps/web/src/: index.css  main.tsx  routeTree.gen.ts
apps/web/src/components/glossary/: GlossaryTooltip.tsx
apps/web/src/components/health/: HealthChip.tsx
apps/web/src/components/intelligence/: ConfirmationBadge.tsx  IntelligenceCard.tsx  IntelligenceCredibilityBar.tsx  NewsTicker.tsx
apps/web/src/components/layout/: AppShell.tsx
apps/web/src/components/signals/: ConfidenceBadge.tsx  FreshnessIndicator.tsx  SignalCard.tsx  SignalExplainabilityPanel.tsx  SignalNewsPanel.tsx
apps/web/src/components/ui/: EmptyState.tsx
apps/web/src/content/glossary/: terms.ts
apps/web/src/domain/fixtures/: mock-intelligence.ts  mock-signals.ts
apps/web/src/domain/schemas/: health.ts  intelligence.test.ts  intelligence.ts  platform.ts  signal.ts
apps/web/src/routes/: __root.tsx  index.tsx
apps/web/src/routes/academy/: index.tsx
apps/web/src/routes/app/: route.tsx
apps/web/src/routes/app/backtests/: index.tsx
apps/web/src/routes/app/health/: index.tsx
apps/web/src/routes/app/intelligence/: $itemId.tsx  index.tsx
apps/web/src/routes/app/settings/: index.tsx
apps/web/src/routes/app/signals/: $signalId.tsx  index.tsx
apps/web/src/routes/app/strategies/: index.tsx
apps/web/src/routes/status/: index.tsx
config/: intelligence.yaml  settings.yaml
docs/: DEPLOYMENT.md  FRONTEND_PRODUCT_PLAN.md  INTELLIGENCE_PIPELINE.md  PERPLEXITY_CONTEXT.md  PERPLEXITY_CONTEXT.txt  PERPLEXITY_SPACE_INSTRUCTIONS.md
docs/prompts/: DASHBOARD_INTELLIGENCE_NEWS.md
scripts/: web-dev.sh
scripts/docker/: init-databases.sql
src/signals_lab/: __init__.py  config.py
src/signals_lab/api/: __init__.py  app.py  dependencies.py
src/signals_lab/api/routes/: health.py  intelligence.py  signals.py
src/signals_lab/api/schemas/: health.py  intelligence.py  signals.py
src/signals_lab/api/services/: intelligence_cache.py  seed_intelligence.py  signal_catalog.py
src/signals_lab/domain/: __init__.py  enums.py  evaluation.py  events.py  features.py  intelligence.py  intelligence_enums.py  market.py  onchain.py  signals.py  social.py
src/signals_lab/features/: __init__.py  engine.py  registry.py
src/signals_lab/features/families/: __init__.py  common.py  events.py  mean_reversion.py  momentum.py  onchain.py  social.py  trend.py  volatility.py
src/signals_lab/ingestion/: __init__.py  base.py  event_ingestor.py  intelligence_ingestor.py  market_ingestor.py  normalizer.py  onchain_ingestor.py  scheduler.py  social_ingestor.py
src/signals_lab/ingestion/providers/: __init__.py  base_intelligence.py
src/signals_lab/ingestion/providers/news/: __init__.py  cryptocurrency_cv.py  rss_feed.py
src/signals_lab/intelligence/: __init__.py  config_loader.py  credibility.py  dedup.py  engine.py  novelty.py
src/signals_lab/signals/: __init__.py  confidence.py  rules.py
src/signals_lab/storage/: __init__.py  relational.py  repository.py  timeseries.py
src/signals_lab/utils/: __init__.py  context_export.py  datetime.py  health.py  logging.py
tests/: conftest.py
tests/unit/api/: test_intelligence_routes.py
tests/unit/domain/: test_enums.py  test_market.py  test_signals.py
tests/unit/features/: test_engine.py  test_registry.py  test_trend.py
tests/unit/intelligence/: test_credibility.py  test_dedup.py  test_normalizer.py  test_pipeline.py
tests/unit/signals/: test_confidence.py  test_rules.py
tests/unit/utils/: test_context_export.py  test_health.py
